--- a/p5js_osc_to_view/index.html
+++ b/p5js_osc_to_view/index.html
@@ -5,6 +5,7 @@
   <script src="lib/p5.dom.min.js"></script>
   <script src="lib/p5.sound.min.js"></script>
   <script src="lib/p5.play.js"></script>
+  <script src="http://127.0.0.1:8081/socket.io/socket.io.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="utf-8">
 </head>
