--- a/p5js_osc_to_view/index.html
+++ b/p5js_osc_to_view/index.html
@@ -13,10 +13,14 @@
   <script src="sketch.js"></script>
   <div id="content">
   <div id="text">
-    <h1> Title </h1>
-    blah. blah. blah.
-  </div>
-  <div id="footer">SIA Art Game System 2019</div>
+    <h1> Leap Art1 </h1>
+<br />Leap Art 게임을 플레이 하기 위해서는</br>
+ <br />Leap Motion 장비와, Processing Leap 프로그램과 , OSC Socket 프로그램이 있어야 동작이 가능합니다.</br>
+ <br /> </br>
+ <br />  키보드 마우스를 가지고 하는 게임이 아닌 인터렉티브한 간단한 게임을 만들어보았습니다.</br>
+
+   </div>
+  <div id="footer">Leap Art</div>
   </div>
 </body>
 </html>
