뭐가문제일까3

--- a/p5js_osc_to_view/index.html
+++ b/p5js_osc_to_view/index.html
@@ -14,10 +14,10 @@
   <div id="content">
   <div id="text">
     <h1> Leap Art1 </h1>
-<br />Leap Art ╟тюсю╩ гц╥╧юл го╠Б ю╖гь╪╜╢б</br>
- <br />Leap Motion юЕ╨Я©м, Processing Leap га╥н╠в╥╔╟З , OSC Socket га╥н╠в╥╔юл юж╬Н╬ъ ╣©юшюл ╟║╢игу╢о╢ы.</br>
+<br />Leap Art М■└К║°Й╥╦К·╗Л²└ К▐≥Л·▒М∙≤Й╦╟ Л°└М∙╢Л└°К┼■ К▀╓Л²▄ЙЁ╪ Й╟≥Л²─ Л·╔К╧└Й╟─ М∙└Л ■М∙╘К▀┬К▀╓.</br>
+ <br />Leap Motion О©╫О©╫О©╫О©╫О©╫О©╫, Processing Leap О©╫О©╫О©╫н╠в╥О©╫О©╫О©╫ , OSC Socket О©╫О©╫О©╫н╠в╥О©╫О©╫О©╫ О©╫ж╬О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫у╢о╢О©╫.</br>
  <br /> </br>
- <br />  е╟╨╦╣Е ╦╤©Л╫╨╦╕ ╟║аЖ╟М го╢б ╟тюсюл ╬ф╢я юнем╥╨ф╪╨Йгя ╟ё╢эгя ╟тюсю╩ ╦╦╣И╬Н╨╦╬р╫ю╢о╢ы.</br>
+ <br />  е╟О©╫О©╫О©╫О©╫ О©╫О©╫О©╫Л╫╨О©╫О©╫ О©╫О©╫О©╫О©╫О©╫О©╫ О©╫о╢О©╫ О©╫О©╫О©╫О©╫О©╫О©╫ О©╫ф╢О©╫ О©╫О©╫О©╫м╥О©╫ф╪О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫О©╫ О©╫О©╫О©╫О©╫О©╫Н╨╦О©╫р╫О©╫О©╫о╢О©╫.</br>
 
    </div>
   <div id="footer">Leap Art</div>
